adjusted some spacing issues

--- a/style.css
+++ b/style.css
@@ -237,26 +237,30 @@ p {
 
 @media (width > 900px) {
 
+  * {
+    outline: 1px dashed red;
+  }
+
   body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: hsl(0, 0%, 95%);
+    margin: 50px auto;
   }
 
   .container {
     display: grid;
     grid-template-columns: 200px repeat(3, 1fr);
-    grid-template-rows: auto 200px 200px;
+    grid-template-rows: auto;
     grid-template-areas:
-      "aside main main main"
-      "aside main main main"
-      "aside main main main"
-      "footer footer footer footer";
+      "aside main main main";
     gap: 20px;
     max-width: 1440px;
+    height: auto;
     margin: 0;
-    padding: 20px;
+    padding: 0;
   }
 
   .card-container {
@@ -272,7 +276,7 @@ p {
   }
 
   main {
-    height: 95vh;
+    height: auto;
 
   }
 
@@ -280,11 +284,15 @@ p {
     grid-column: 1;
     grid-row: 1 / span 3;
     display: grid;
-    grid-template-rows: 41.5% 41.5%;
+    grid-template-rows: 45.5% 45.5%;
     gap: 20px;
-    height: 95vh;
+    height: auto;
   }
 
+  footer {
+    margin-top: 0;
+  }
+  
   .main {
     grid-column: 2 / span 3;
     grid-row: 1 / span 3;
@@ -294,7 +302,6 @@ p {
     gap: 25px;
     max-width: none;
     width: 100%;
-    height: 100%;
   }
 
   .card-1 {
